@@ -14,7 +14,6 @@ import org.elasticsearch.common.xcontent.XContentParser;
 import org.elasticsearch.license.XPackLicenseState;
 import org.elasticsearch.rest.BytesRestResponse;
 import org.elasticsearch.rest.RestRequest;
-import org.elasticsearch.rest.RestRequest.Method;
 import org.elasticsearch.rest.RestResponse;
 import org.elasticsearch.rest.RestStatus;
 import org.elasticsearch.rest.action.RestBuilderListener;
@@ -23,9 +22,10 @@ import org.elasticsearch.xpack.idp.action.PutSamlServiceProviderRequest;
 import org.elasticsearch.xpack.idp.action.PutSamlServiceProviderResponse;
 
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
+
+import static org.elasticsearch.rest.RestRequest.Method.POST;
+import static org.elasticsearch.rest.RestRequest.Method.PUT;
 
 public class RestPutSamlServiceProviderAction extends IdpBaseRestHandler {
 
@@ -40,10 +40,10 @@ public class RestPutSamlServiceProviderAction extends IdpBaseRestHandler {
 
     @Override
     public List<Route> routes() {
-        return Collections.unmodifiableList(Arrays.asList(
-            new Route(Method.PUT, "/_idp/saml/sp/{sp_entity_id}"),
-            new Route(Method.POST, "/_idp/saml/sp/{sp_entity_id}")
-        ));
+        return org.elasticsearch.common.collect.List.of(
+            new Route(PUT, "/_idp/saml/sp/{sp_entity_id}"),
+            new Route(POST, "/_idp/saml/sp/{sp_entity_id}")
+        );
     }
 
     @Override
